# FinAgnets

./: README.md  pyproject.toml
Agents/: NewsAnalyzerAgent.py
src/fincrew/: crew.py  main.py
