[project]
name = "fincrew"
version = "0.1.0"
description = "FinCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
fincrew = "fincrew.main:run"
run_crew = "fincrew.main:run"
train = "fincrew.main:train"
replay = "fincrew.main:replay"
test = "fincrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
